{
  "version": 4,
  "terraform_version": "1.0.0",
  "serial": 11,
  "lineage": "42ec5204-f015-9526-0601-3b932c29533f",
  "resources": [
    {
      "module": "module.QA",
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-082d645d7cbf18b97",
            "arn": "arn:aws:ec2:us-east-1:056183115561:instance/i-04c92eb91783cfa9d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04c92eb91783cfa9d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04735bee0197ecd8e",
            "private_dns": "ip-10-0-1-175.ec2.internal",
            "private_ip": "10.0.1.175",
            "public_ip": "54.205.60.129",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d528f4fc90669754",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b14415acbbc634e9",
            "tags": {
              "Name": "QA-vm"
            },
            "tags_all": {
              "Name": "QA-vm"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0235fba31ad15514d"
            ]
          },
          "dependencies": [
            "module.QA.aws_security_group.main",
            "module.QA.aws_subnet.pub_subnet1",
            "module.QA.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.QA",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:056183115561:internet-gateway/igw-093b1976683c29c61",
            "id": "igw-093b1976683c29c61",
            "owner_id": "056183115561",
            "tags": {
              "Name": "QA-my-igw"
            },
            "tags_all": {
              "Name": "QA-my-igw"
            },
            "vpc_id": "vpc-0a40d7a7151d87998"
          },
          "dependencies": [
            "module.QA.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.QA",
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "rtb_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af28f03d25ce96fe",
            "original_route_table_id": "rtb-0e07e7e6b41654d25",
            "route_table_id": "rtb-00ce20c7ad5c6dc7b",
            "vpc_id": "vpc-0a40d7a7151d87998"
          },
          "dependencies": [
            "module.QA.aws_internet_gateway.main",
            "module.QA.aws_route_table.igw_route",
            "module.QA.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.QA",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "igw_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:056183115561:route-table/rtb-00ce20c7ad5c6dc7b",
            "id": "rtb-00ce20c7ad5c6dc7b",
            "owner_id": "056183115561",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-093b1976683c29c61",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "QA-test-rtb-igw"
            },
            "tags_all": {
              "Name": "QA-test-rtb-igw"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a40d7a7151d87998"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.QA.aws_internet_gateway.main",
            "module.QA.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.QA",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:056183115561:security-group/sg-0235fba31ad15514d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0235fba31ad15514d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "main Security Group",
            "name_prefix": "",
            "owner_id": "056183115561",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "QA-my-SG"
            },
            "tags_all": {
              "Name": "QA-my-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a40d7a7151d87998"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.QA.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.QA",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:056183115561:subnet/subnet-0b14415acbbc634e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0b14415acbbc634e9",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "056183115561",
            "tags": {
              "Name": "QA-Public-Subnet-1"
            },
            "tags_all": {
              "Name": "QA-Public-Subnet-1"
            },
            "vpc_id": "vpc-0a40d7a7151d87998"
          },
          "dependencies": [
            "module.QA.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.QA",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:056183115561:subnet/subnet-0380f00d8465bce33",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0380f00d8465bce33",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "056183115561",
            "tags": {
              "Name": "QA-Public-Subnet-2"
            },
            "tags_all": {
              "Name": "QA-Public-Subnet-2"
            },
            "vpc_id": "vpc-0a40d7a7151d87998"
          },
          "dependencies": [
            "module.QA.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.QA",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:056183115561:subnet/subnet-0b11162d487c116ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0b11162d487c116ca",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "056183115561",
            "tags": {
              "Name": "QA-Private-Subnet-1"
            },
            "tags_all": {
              "Name": "QA-Private-Subnet-1"
            },
            "vpc_id": "vpc-0a40d7a7151d87998"
          },
          "dependencies": [
            "module.QA.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.QA",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:056183115561:subnet/subnet-006be9dcf24e91328",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-006be9dcf24e91328",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "056183115561",
            "tags": {
              "Name": "QA-Private-Subnet-2"
            },
            "tags_all": {
              "Name": "QA-Private-Subnet-2"
            },
            "vpc_id": "vpc-0a40d7a7151d87998"
          },
          "dependencies": [
            "module.QA.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.QA",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:056183115561:vpc/vpc-0a40d7a7151d87998",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07fb781a0d0183afc",
            "default_route_table_id": "rtb-0e07e7e6b41654d25",
            "default_security_group_id": "sg-0c7aa229983d94774",
            "dhcp_options_id": "dopt-030d34a35e9667740",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0a40d7a7151d87998",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e07e7e6b41654d25",
            "owner_id": "056183115561",
            "tags": {
              "Name": "QA"
            },
            "tags_all": {
              "Name": "QA"
            }
          }
        }
      ]
    }
  ]
}